--- a/css/styles.css
+++ b/css/styles.css
@@ -21,11 +21,25 @@ nav .sidenav-trigger{
   margin: 0;
 }
 
-/* recipe styles */
-.recipes{
+/* Button styles */
+.sticky-btn {
+  position: sticky;
+  bottom: 20px;
+  right: 50px;
+}
+
+/* Photo styles */
+.listPhoto{
+  width: 100px;
+  /* max-width: 550px; */
+  height: auto;
+}
+
+/* location styles */
+.location{
   margin-top: 20px;
 }
-.card-panel.recipe{
+.card-panel.location{
   border-radius: 8px;
   padding: 10px;
   box-shadow: 0px 1px 3px rgba(90,90,90,0.1);
@@ -34,27 +48,28 @@ nav .sidenav-trigger{
   grid-template-areas: "image details delete";
   position: relative;
 }
-.recipe img{
+.location img{
   grid-area: image;
-  max-width: 60px;
+  padding: 10px;
+  max-width: 120px;
 }
-.recipe-details{
+.location-details{
   grid-area: details;
   margin-top: 6px;
 }
-.recipe-delete{
+.location-delete{
   grid-area: delete;
   position: absolute;
   bottom: 0px;
   right: 0px;
 }
-.recipe-delete i{
+.location-delete i{
   font-size: 18px;
 }
-.recipe-title{
+.location-title{
   font-weight: bold;
 }
-.recipe-ingredients{
+.location-ingredients{
   font-size: 0.8em;
 }
 
